tests/snapshots/formatter__call_user_line_breaks_formatted.snap
---
source: tests/formatter.rs
assertion_line: 249
expression: formatted
---
# Unlike air, Ravel doesn't cater to user line breaks
dictionary <- list(a = 1, b = 2)

dictionary <- list(a = 1, b = 2)

dictionary <- list(a = 1, b = 2)

list(a = 1, b = list(foo = "a", bar = "b"))

df |>
  foo(a = 1) |>
  bar(b = 2, c = 3)

df |>
  foo(a = 1) |>
  bar(b = 2, c = 3)
