tests/snapshots/formatter__function_bare_control_flow_body_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
function(p) if (cond) {
  arm1
} else {
  arm2
}

function(p) for (x in xs) {
  body
}

function(p) while (cond) {
  body
}

function(p) repeat {
  body
}

function(p_that_is_pretty_long_to_just_almost_break) if (cond) {
  arm1
} else {
  arm2
}

function(p_that_is_long_enough_that_the_bare_body_does_not_fit_anymore) {
  if (cond) {
    arm1
  } else {
    arm2
  }
}
