tests/snapshots/formatter__function_definition_user_requested_line_break_followup_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
fn <- function(..., a, b) {
  body
}

fn <- function(..., a, b) {
  body
}

fn <- function(a, b = c(1, 2, 3)) {
  body
}
